# ConfigParser

./: CMakeLists.txt  LICENSE  README.md
include/: ConfigParser.h  Conversion.h
src/: ConfigParser.cpp  Conversion.cpp
test/: CMakeLists.txt  config_parser_test.cpp  config_test.conf
