CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12 FATAL_ERROR)

IF (POLICY CMP0042)
    CMAKE_POLICY(SET CMP0042 NEW)
ENDIF()

PROJECT(ConfigParser CXX)

SET(ConfigParser_VERSION "1.0.0")

INCLUDE_DIRECTORIES(include)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
SET(CMAKE_CXX_STANDARD 11)

FILE(GLOB lib_SOURCES src/*.cpp)

ADD_LIBRARY(ConfigParser_Shared SHARED ${lib_SOURCES})
SET_TARGET_PROPERTIES(ConfigParser_Shared PROPERTIES
    LINKER_LANGUAGE CXX
    VERSION ${ConfigParser_VERSION}
    OUTPUT_NAME ConfigParser
)
SET(ConfigParser_LIBRARY ConfigParser_Shared)

ADD_SUBDIRECTORY(test)
